hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_varray.php
<?hh

function test(): void {
  darray["tingley" => 0, "meijer"];
}
